# alere

./: .gitignore  README.md  README.txt  TODO.txt  custom_kmy_kinds.py  index.html  jest.config.js  mypy.ini  package-lock.json  package.json  requirements.txt  reset.sh  run_backend.sh  run_frontend.sh  runbtest.sh  tsconfig.json  vite.config.ts
alere_lib/: Cargo.toml
alere_lib/migrations/2022-06-30-112355_create_tables/: up.sql
alere_lib/migrations/2022-06-30-130256_initial_data/: up.sql
alere_lib/src/: account_kinds.rs  account_lists.rs  accounts.rs  cashflow.rs  commodities.rs  commodity_kinds.rs  connections.rs  cte_accounts.rs  cte_list_splits.rs  cte_query_balance.rs  cte_query_networth.rs  dates.rs  errors.rs  income_expense.rs  institutions.rs  kmymoney_import.rs  ledger.rs  lib.rs  means.rs  metrics.rs  models.rs  payees.rs  price_sources.rs  prices.rs  query.rs  quotes.rs  reconciliation.rs  scaling.rs  scenarios.rs  schema.rs  splits.rs  transactions.rs
backend/: manage.py
backend/alere/: asgi.py  settings.py  urls.py  wsgi.py
backend/alere/importers/: __init__.py  kmymoney.py  test_kmymoney.py
backend/alere/migrations/: 0001_initial.py  0002_initial_data_and_views.py  0003_future_transactions_scheduled.py
backend/alere/models/: __init__.py  funcs.py
backend/alere/views/: account_add.py  accounts.py  base_test.py  importers.py  json.py  kmm.py  kmymoney.py  ledger.py  means.py  metrics.py  networth.py  networth_history.py  ofx.py  online.py  plots.py  price_sources.py  prices.py  queries.py  quotes.py  test_mean.py  test_metrics.py  test_networth.py  test_ofx.py  test_plots.py  test_scheduled.py  utils.py
frontend/: index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: index.css  index.scss  index.tsx  setupProxy.js  setupTests.ts  shared.scss
frontend/src/Account/: Account.css  Account.scss  SelectAccountKinds.tsx  SelectMultiAccount.tsx  index.tsx
frontend/src/AccountEdit/: Panel.tsx  View.tsx
frontend/src/App/: App.css  (+5 more)
public/: index.html
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accounts.rs  cashflow.rs  connections.rs  income_expense.rs  ledger.rs  main.rs  means.rs  metrics.rs  quotes.rs  settings.rs
src/App/: App.css  index.tsx
src/Footer/: Footer.css
src/Header/: Header.css  index.tsx
src/Ledger/: Ledger.css  index.tsx
src/LeftSideBar/: LeftSideBar.css  index.tsx
src/Numeric/: Numeric.css
src/RightSideBar/: AccountSummary.css  AccountSummary.tsx  RightSideBar.css  index.tsx
src/ToolBar/: Button.tsx  ToolBar.css  index.tsx
src/Transaction/: index.tsx
(+200 files in other folders)
