[package]
name = "alere_lib"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Briot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
#  env_logger = "0.9.0"
lazy_static = "1.2.0"
log = "0.4"
memoize = { version = "0.3.0", features = ["full"] }
regex = "1"
rrule = { version = "0.8.0" }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
   "runtime-async-std-native-tls", "sqlite", "macros",
   "migrate", "chrono"] }
