[package]
name = "alere_lib"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Briot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.6.1"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
lazy_static = "1.2.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
log = "0.4"
memoize = { version = "0.3.0", features = ["full"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
regex = "1"
rrule = { version = "0.8.0" }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
