[package]
name = "alere"
version = "0.1.0"
description = "Assets, Liabilities, Equity, Revenues, Expenses"
authors = ["Emmanuel Briot"]
license = ""
repository = ""
default-run = "alere"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
alere_lib = { path = '../alere_lib', version = '*'}
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["devtools", "dialog-open", "dialog-save", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"] }

[features]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
